fix: GatewaySerializationTest not match JDK test